Record all types of foreground renderer crashes

The UMA did not record main frame intentional kill and normal
termination crash without minidump.

BUG=846871

Change-Id: I6d423aaedb19b8b08cb7265d5e0dffd1a3ff170d
Reviewed-on: https://chromium-review.googlesource.com/1077610
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Maria Khomenko <mariakhomenko@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: Siddhartha S <ssid@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562906}
Former-commit-id: 691f54d6efaadc9c3ed2ec5f1a8c3c5186262a30